syntax = "proto3";

package post;

option go_package = "./pb/post";

import "google/protobuf/timestamp.proto";

service PostService {
    rpc Create(CreatePostRequest) returns (CreatePostResponse);
    rpc GetPosts(GetPostsRequest) returns (GetPostsResponse);
    rpc AddImages(AddPostImagesRequest) returns (AddPostImagesResponse);
}

message Post {
    string id = 1;
    string owner_id = 2;
    string owner_name = 3;
    string owner_surname = 4;
    string title = 5;
    string ingredients = 6;
    int64 portion_quantity = 7;
    string preparation = 8;
    repeated string pictures = 9;
    google.protobuf.Timestamp creation_date = 10;
}

message Picture {
    string path = 1;
}

message GetPostsRequest {
    string token = 2;
    int64 page = 3;
    int64 page_size = 4;
    optional string userId = 5;
}

message GetPostsResponse {
    repeated Post posts = 1;
}

message CreatePostRequest {
    string token = 1;
    string owner_id = 2;
    string title = 5;
    string ingredients = 6;
    int64 portion_quantity = 7;
    string preparation = 8;
    repeated string pictures = 9;
}

message CreatePostResponse {
    string id = 1;
    string owner_id = 2;
    string owner_name = 3;
    string owner_surname = 4;
    string title = 5;
    string ingredients = 6;
    int64 portion_quantity = 7;
    string preparation = 8;
}

message AddPostImagesRequest {
    string token = 1;
    string id = 2;
    string owner_id = 3;
    repeated string images = 4;
}

message AddPostImagesResponse {
    string message = 1;
}